@@ -16,6 +16,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-9298 (Signal handler called after rshutdown leads to crash).
     (Erki Aring)
 
+- Session:
+  . Fixed GH-9932 (session name silently fails with . and [). (David Carlier)
+
 24 Nov 2022, PHP 8.1.13
 
 - CLI:
